DBアクセス成功

--- a/Contents/front/templates/index.html
+++ b/Contents/front/templates/index.html
@@ -21,7 +21,8 @@
     <div class="u-Container">
       
       <div class="c-Head">
-        <p>Hello, python!</p>
+        <p>Hello, python更新が反映されない
+        </p>
         {% if error_message %}
         <p style="color: red;">{{ error_message }}</p>
         {% endif %}
@@ -32,7 +33,7 @@
 
       <div class="c-Body">
         <div class="c-Btn-Wrapper">
-          <p>メソッド呼び出しボタン</p>
+          <p>メソッド呼び出しボタンですねえ</p>
           <button id="js-Btn">
           </button>
         </div>
