データベースの立ち上げsqlを作成

--- a/Contents/front/templates/index.html
+++ b/Contents/front/templates/index.html
@@ -21,10 +21,10 @@
     <div class="u-Container">
       
       <div class="c-Head">
-        <p>Hello, python更新が反映されない
+        <p>Hello, python更新が反映されな？
         </p>
         {% if error_message %}
-        <p style="color: red;">{{ error_message }}</p>
+        <p style="color: red;">{{ error_message }}</p>  
         {% endif %}
         {% if success_message %}
         <p style="color: blue;">{{ success_message }}</p>
@@ -32,8 +32,8 @@
       </div>
 
       <div class="c-Body">
-        <div class="c-Btn-Wrapper">
-          <p>メソッド呼び出しボタンですねえ</p>
+        <div class="c-Btn-Wrapper">.
+          <p>メソッド呼び出しボタンですねえどうかな？</p>
           <button id="js-Btn">
           </button>
         </div>
