--- a/Contents/front/modules/templates/large_category.html
+++ b/Contents/front/modules/templates/large_category.html
@@ -21,7 +21,7 @@
     <div class="u-Container">
       
       <div class="c-Head">
-        <p>small_category
+        <p>large_category
         </p>
         {% if error_message %}
         <p style="color: red;">{{ error_message }}</p>  
@@ -40,7 +40,7 @@
       </div>
 
       <div class="c-Body">
-        <p>小分類いちらん</p>
+        <p>dai分類いちらん</p>
         <div id="js-Data-Wrapper" data-list='res'>
         </div>
       </div>
