フロントサーバー実装

--- a/Contents/front/static/css/main.css
+++ b/Contents/front/static/css/main.css
@@ -26,4 +26,9 @@
 }
 .c-Head-Form-Wrapper p.title {
   font-size: 200%;
+}
+
+.c-Body-List {
+  margin: 10px;
+  padding: 10px;
 }/*# sourceMappingURL=main.css.map */
