--- a/Contents/front/templates/detail_card.html
+++ b/Contents/front/templates/detail_card.html
@@ -2,8 +2,8 @@
 <html lang="ja">
 
 <head>
-  <link rel="stylesheet" href="./../static/css/main.css">
-  <link rel="stylesheet" href="./../static/js/main.js">
+  <link rel="stylesheet" href="http://localhost:5005/static/css/main.css">
+  <link rel="stylesheet" href="http://localhost:5005/static/js/main.js">
 
   <!-- Required meta tags -->
   <meta charset="UTF-8">
@@ -60,7 +60,7 @@
   <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk="
     crossorigin="anonymous"></script>
 
-  <script src="./../static/js/main.js"></script>
+  <script src="http://localhost:5005/static/js/main.js"></script>
 
 </body>
 
