--- a/Contents/front/templates/large_category.html
+++ b/Contents/front/templates/large_category.html
@@ -2,8 +2,8 @@
 <html lang="ja">
 
 <head>
-  <link rel="stylesheet" href="./../static/css/main.css">
-  <link rel="stylesheet" href="./../static/js/main.js">
+  <link rel="stylesheet" href="http://localhost:5005/static/css/main.css">
+  <link rel="stylesheet" href="http://localhost:5005/static/js/main.js">
 
   <!-- Required meta tags -->
   <meta charset="UTF-8">
@@ -18,39 +18,12 @@
 
 <body>
   <main>
+    
     <div class="u-Container">
       
-      <div class="c-Head">
-        <p>large_category
-        </p>
-        {% if error_message %}
-        <p style="color: red;">{{ error_message }}</p>  
-        {% endif %}
-        {% if success_message %}
-        <p style="color: blue;">{{ success_message }}</p>
-        {% endif %}
-      </div>
-
-      <div class="c-Body">
-        <div class="c-Btn-Wrapper">.
-          <p>メソッド呼び出しボタン</p>
-          <button id="js-Btn">
-          </button>
-        </div>
-      </div>
-
-      <div class="c-Body">
-        <p>dai分類いちらん</p>
-        <div id="js-Data-Wrapper" data-list='res'>
-          <p>{{ res_list }}</p>
-        </div>
-      </div>
-
-      <div class="c-Body">
-        <div class="c-Btn-Wrapper">.
-          <p>カード一覧に遷移ボタン</p>
-          <button id="js-Btn-Go-ListCards">
-          </button>
+      <div class="c-Body-List">
+        <p>大分類いちらん</p>
+        <div id="js-Data-Wrapper-ListLargeCategory">
         </div>
       </div>
 
@@ -58,10 +31,14 @@
 
   </main>
 
+  <script>
+    var data_json = {{res_json | tojson}}
+  </script>
+
   <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk="
     crossorigin="anonymous"></script>
 
-  <script src="./../static/js/main.js"></script>
+  <script src="http://localhost:5005/static/js/main.js"></script>
 
 </body>
 
