--- a/Contents/front/templates/put_card.html
+++ b/Contents/front/templates/put_card.html
@@ -2,8 +2,8 @@
 <html lang="ja">
 
 <head>
-  <link rel="stylesheet" href="./../static/css/main.css">
-  <link rel="stylesheet" href="./../static/js/main.js">
+  <link rel="stylesheet" href="http://localhost:5005/static/css/main.css">
+  <link rel="stylesheet" href="http://localhost:5005/static/js/main.js">
 
   <!-- Required meta tags -->
   <meta charset="UTF-8">
@@ -22,7 +22,7 @@
       
       <div class="c-Head-Form-Wrapper">
         <p class="title">単語帳カード修正</p>
-        <form action="put" method="put">
+        <form action="update" method="post">
           <p><label><input type="text" placeholder="単語を入力" name="card_name"></label></p>
           <p><label><input type="text" placeholder="大分類を入力" name="large_category_name"></label></p>
           <p><label><input type="text" placeholder="小分類を入力" name="small_category_name"></label></p>
@@ -56,7 +56,7 @@
   <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk="
     crossorigin="anonymous"></script>
 
-  <script src="./../static/js/main.js"></script>
+  <script src="http://localhost:5005/static/js/main.js"></script>
 
 </body>
 
