あとはjsバグとインポート不足だけ

--- a/Contents/front/static/css/main.css
+++ b/Contents/front/static/css/main.css
@@ -31,4 +31,7 @@
 .c-Body-List {
   margin: 10px;
   padding: 10px;
+}
+.c-Body-List input.List_Btn {
+  margin: 10px;
 }/*# sourceMappingURL=main.css.map */
