--- a/Contents/front/static/css/main.scss
+++ b/Contents/front/static/css/main.scss
@@ -34,5 +34,9 @@
 
 .c-Body-List {
     margin:10px;
-    padding:10px;    
+    padding:10px;
+
+    input.List_Btn {
+        margin:10px;
+    }
 }
