--- a/Contents/front/templates/list_cards.html
+++ b/Contents/front/templates/list_cards.html
@@ -22,8 +22,24 @@
     <div class="u-Container">
       
       <div class="c-Body-List">
-        <p>カードいちらん</p>
+        <p>単語帳一覧</p>
         <div id="js-Data-Wrapper-ListCards">
+        </div>
+      </div>
+
+      <div class="c-Body-List">
+        <div class="c-Btn-For-Move">
+          <form action="/post_card/view" method="post">
+            <p><input type="submit" class="button1" value="単語帳を作る"/></p>
+          </form>
+        </div>
+      </div>
+
+      <div class="c-Body-List">
+        <div class="c-Btn-For-Move">
+          <form action="/" method="get">
+            <p><input type="submit" class="button1" value="大分類一覧へ"/></p>
+          </form>
         </div>
       </div>
 
