--- a/Contents/front/templates/put_card.html
+++ b/Contents/front/templates/put_card.html
@@ -49,6 +49,14 @@
         </form>
       </div>
 
+      <div class="c-Body-List">
+        <div class="c-Btn-For-Move">
+          <form action="/" method="get">
+            <p><input type="submit" class="button1" value="大分類一覧へ"/></p>
+          </form>
+        </div>
+      </div>
+
     </div>
 
   </main>
