--- a/Contents/front/templates/large_category.html
+++ b/Contents/front/templates/large_category.html
@@ -27,6 +27,14 @@
         </div>
       </div>
 
+      <div class="c-Body-List">
+        <div class="c-Btn-For-Move">
+          <form action="/post_card/view" method="post">
+            <p><input type="submit" class="button1" value="単語帳を作る"/></p>
+          </form>
+        </div>
+      </div>
+
     </div>
 
   </main>
