--- a/Contents/front/static/css/main.css
+++ b/Contents/front/static/css/main.css
@@ -1,12 +1,22 @@
 .u-Container {
   max-width: 600px;
+  min-height: 1500px;
   margin-right: auto;
   margin-left: auto;
   text-align: center;
+  background-color: rgb(172, 232, 232);
+  color: rgb(14, 34, 36);
 }
-
-.c-Head {
+.u-Container .c-Massage-Wrapper {
   margin: 10px;
+  color: blue;
+}
+.u-Container .c-Head {
+  font-size: 200%;
+  padding: 10px;
+}
+.u-Container .c-Head p {
+  margin: 0px;
 }
 
 .c-Head-Form-Wrapper {
@@ -28,10 +38,39 @@
   font-size: 200%;
 }
 
-.c-Body-List {
+input.List_Btn {
+  margin: 10px;
+  min-width: 400px;
+}
+
+.c-Wrapper-ListCards {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+.c-Wrapper-ListCards input.Card_List_Btn {
+  min-width: 150px;
+  min-height: 40px;
+  margin: 10px;
+}
+
+.c-Wrapper-Btn-For-Move {
+  margin: 30px;
+}
+
+.c-Note-Wrapper {
+  max-width: 400px;
+  min-height: 400px;
+  background-color: rgb(255, 255, 255);
+  margin-right: auto;
+  margin-left: auto;
+}
+.c-Note-Wrapper .a-title {
   margin: 10px;
   padding: 10px;
+  font-size: 120%;
 }
-.c-Body-List input.List_Btn {
+.c-Note-Wrapper .a-Note-Content {
   margin: 10px;
+  padding: 10px;
 }/*# sourceMappingURL=main.css.map */
