--- a/Contents/front/templates/large_category.html
+++ b/Contents/front/templates/large_category.html
@@ -21,20 +21,20 @@
     
     <div class="u-Container">
       
+      <div class="c-Head">
+        <p>大分類一覧</p>
+      </div>
+
       <div class="c-Body-List">
-        <p>大分類いちらん</p>
         <div id="js-Data-Wrapper-ListLargeCategory">
         </div>
       </div>
 
-      <div class="c-Body-List">
-        <div class="c-Btn-For-Move">
-          <form action="/post_card/view" method="post">
-            <p><input type="submit" class="button1" value="単語帳を作る"/></p>
-          </form>
-        </div>
+      <div class="c-Wrapper-Btn-For-Move">
+        <form action="/post_card/view" method="post">
+          <p><input type="submit" value="単語帳を作る"/></p>
+        </form>
       </div>
-
     </div>
 
   </main>
