--- a/Contents/front/templates/put_card.html
+++ b/Contents/front/templates/put_card.html
@@ -26,7 +26,7 @@
           <p><label><input type="text" placeholder="単語を入力" name="card_name"></label></p>
           <p><label><input type="text" placeholder="大分類を入力" name="large_category_name"></label></p>
           <p><label><input type="text" placeholder="小分類を入力" name="small_category_name"></label></p>
-          <p><label><textarea name="note_conent" placeholder="ノートを入力"></textarea></label></p>
+          <p><label><textarea name="note_content" placeholder="ノートを入力"></textarea></label></p>
           <p><label>重要度: <select name="significance">
             <option value="1">★</option>
             <option value="2">★★</option>
@@ -51,10 +51,20 @@
 
       <div class="c-Body-List">
         <div class="c-Btn-For-Move">
-          <form action="/" method="get">
+          <form action="/large_category/get_list" method="get">
             <p><input type="submit" class="button1" value="大分類一覧へ"/></p>
           </form>
         </div>
+      </div>
+
+      <div class="c-Wrapper-Btn-For-Move">
+        <form action="/post_card/view" method="post">
+          <p><input type="submit" value="単語帳を作る"/></p>
+        </form>
+      
+        <form action="/large_category/get_list" method="get">
+          <p><input type="submit" value="大分類一覧へ"/></p>
+        </form>
       </div>
 
     </div>
