--- a/Contents/front/static/css/main.scss
+++ b/Contents/front/static/css/main.scss
@@ -1,5 +1,5 @@
 .u-Container {
-    max-width :600px;
+    max-width :1000px;
     min-height: 1500px;
     margin-right: auto;
     margin-left: auto;
@@ -13,11 +13,19 @@
     }
 
     .c-Head {
-        font-size: 200%;
-        padding:10px;
+        position:relative;
+        min-height: 80px;
         
-        p {
+        .c-Link-Wrapper {
             margin:0px;
+            font-size: 140%;
+            padding:20px;
+        }
+
+        .c-Wrapper-Btn-For-Move {
+            position:absolute;
+            top:20px;
+            right:5%;
         }
     }
 }
@@ -62,26 +70,31 @@ input.List_Btn {
     }
 }
 
-.c-Wrapper-Btn-For-Move {
+.c-Wrapper-Btn-Bottom {
     margin:30px
 }
 
 .c-Note-Wrapper {
-    max-width: 400px;
-    min-height: 400px;
+    position:fixed;
+    bottom:10%;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 500px;
+    height: 300px;
     background-color:rgb(255, 255, 255);
-    margin-right: auto;
-    margin-left: auto;
 
-    .a-title{
-        margin:10px;
-        padding:10px;
-        font-size: 120%;
+    .c-Note-Inner{
+        position:relative;
+
+        .a-title{
+            margin:20px;
+            font-size: 120%;
+        }
+    
+        .a-Note-Content{
+            white-space: pre-wrap;
+        }
     }
 
-    .a-Note-Content{
-        margin:10px;
-        padding:10px;
-    }
 }
 
