--- a/Contents/front/templates/large_category.html
+++ b/Contents/front/templates/large_category.html
@@ -22,7 +22,14 @@
     <div class="u-Container">
       
       <div class="c-Head">
-        <p>大分類一覧</p>
+        <div class="c-Link-Wrapper">
+          <a>ホーム</a>
+        </div>
+        <div class="c-Wrapper-Btn-For-Move">
+          <form action="/post_card/view" method="post">
+            <p><input type="submit" value="単語帳を作る"/></p>
+          </form>
+        </div>
       </div>
 
       <div class="c-Body-List">
@@ -30,11 +37,6 @@
         </div>
       </div>
 
-      <div class="c-Wrapper-Btn-For-Move">
-        <form action="/post_card/view" method="post">
-          <p><input type="submit" value="単語帳を作る"/></p>
-        </form>
-      </div>
     </div>
 
   </main>
