--- a/Contents/front/templates/put_card.html
+++ b/Contents/front/templates/put_card.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ja">
-
-<head>
+  
+  <head>
   <link rel="stylesheet" href="http://localhost:5005/static/css/main.css">
   <link rel="stylesheet" href="http://localhost:5005/static/js/main.js">
 
@@ -14,62 +14,71 @@
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
   <title>Hello, world!</title>
+
 </head>
 
 <body>
   <main>
     <div class="u-Container">
+
+      <div class="c-Head">
+        <div class="c-Link-Wrapper">
+          <a>単語詳細</a>
+        </div>
+      </div>
+      
+      <div class="c-Massage-Wrapper">
+        <p>{{message}}</p>
+      </div>
+
       
       <div class="c-Head-Form-Wrapper">
-        <p class="title">単語帳カード修正</p>
-        <form action="update" method="post">
-          <p><label><input type="text" placeholder="単語を入力" name="card_name"></label></p>
-          <p><label><input type="text" placeholder="大分類を入力" name="large_category_name"></label></p>
-          <p><label><input type="text" placeholder="小分類を入力" name="small_category_name"></label></p>
-          <p><label><textarea name="note_content" placeholder="ノートを入力"></textarea></label></p>
+        <form action="/put_card/update" method="post">
+          <p><input type="hidden" id="a-Hidden-Card" name="card_id" value=""></p>
+          <p><label><input type="text" id="a-Card" value="" placeholder="単語を入力" name="card_name"></label></p>
+          <p><label><input type="text" id="a-Large" value="" placeholder="大分類を入力" name="large_category_name"></label></p>
+          <p><label><input type="text" id="a-Small" value="" placeholder="小分類を入力" name="small_category_name"></label></p>
+          <p><label><textarea id="a-Note" name="note_content" placeholder="ノートを入力"></textarea></label></p>
           <p><label>重要度: <select name="significance">
             <option value="1">★</option>
             <option value="2">★★</option>
-            <option value="3">★★★</option>
+            <option value="3" selected>★★★</option>
             <option value="4">★★★★</option>
             <option value="5">★★★★★</option>
             </select></label></p>
           <p><label>学習状況: <select name="study_state">
             <option value="0">苦手</option>
-            <option value="1">学習中</option>
+            <option value="1" selected>学習中</option>
             <option value="2">得意</option>
             <option value="3">完璧</option>
-            </select></label></p> 
+          </select></label></p> 
           <p><label><input type="text" placeholder="タグ1を入力" name="tag_name_0"></label></p>
           <p><label><input type="text" placeholder="タグ2を入力" name="tag_name_1"></label></p>
           <p><label><input type="text" placeholder="タグ3を入力" name="tag_name_2"></label></p>
           <p><label><input type="text" placeholder="タグ4を入力" name="tag_name_3"></label></p>
           <p><label><input type="text" placeholder="タグ5を入力" name="tag_name_4"></label></p>
-          <p><input type="submit" class="button1" value="作成"/></p>
+          <p><input type="submit" class="button1" value="保存"/></p>
+        </form>
+
+        <form action="/put_card/delete" method="post">
+          <input type="hidden" id="a-Hidden-Card-Delete" name="card_id" value="">
+          <input type="submit" class="button1" value="削除"/>
         </form>
       </div>
 
-      <div class="c-Body-List">
-        <div class="c-Btn-For-Move">
-          <form action="/large_category/get_list" method="get">
-            <p><input type="submit" class="button1" value="大分類一覧へ"/></p>
-          </form>
-        </div>
-      </div>
-
-      <div class="c-Wrapper-Btn-For-Move">
-        <form action="/post_card/view" method="post">
-          <p><input type="submit" value="単語帳を作る"/></p>
-        </form>
-      
+      <div class="c-Wrapper-Btn-Bottom">
         <form action="/large_category/get_list" method="get">
-          <p><input type="submit" value="大分類一覧へ"/></p>
+          <p><input type="submit" value="ホームに戻る"/></p>
         </form>
       </div>
-
+      
     </div>
 
   </main>
+
+  <script>
+    var data_json = {{res_json | tojson}}
+  </script>
 
   <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk="
     crossorigin="anonymous"></script>
