--- a/Contents/front/templates/list_cards.html
+++ b/Contents/front/templates/list_cards.html
@@ -22,7 +22,12 @@
     <div class="u-Container">
       
       <div class="c-Head">
-        <p>単語一覧</p>
+        <div class="c-Link-Wrapper"></div>
+        <div class="c-Wrapper-Btn-For-Move">
+          <form action="/post_card/view" method="post">
+            <p><input type="submit" value="単語帳を作る"/></p>
+          </form>
+        </div>
       </div>
 
       <div class="c-Body-List">
@@ -30,22 +35,14 @@
         </div>
       </div>
 
-      <div class="c-Wrapper-Btn-For-Move">
-        <form action="/post_card/view" method="post">
-          <p><input type="submit" value="単語帳を作る"/></p>
-        </form>
-      
-        <form action="/large_category/get_list" method="get">
-          <p><input type="submit" value="大分類一覧へ"/></p>
-        </form>
-      </div>
-
       <div class="c-Note-Wrapper">
-        <div id="js-Data-Wrapper-NoteTitle" class="a-title">
-          <p id=js-Note-title class="a-title">ノート</p>
-        </div>
-        <div id="js-Data-Wrapper-Note">
-          <p id="js-Note-Content" class="a-Note-Content">単語にカーソルを合わせてください。</p>
+        <div class="c-Note-Inner">
+          <div id="js-Data-Wrapper-NoteTitle">
+            <p id=js-Note-title class="a-title">ノート</p>
+          </div>
+          <div id="js-Data-Wrapper-Note">
+            <p id="js-Note-Content" class="a-Note-Content">単語にカーソルを合わせてください。</p>
+          </div>
         </div>
       </div>
 
