--- a/Contents/front/templates/post_card.html
+++ b/Contents/front/templates/post_card.html
@@ -21,7 +21,9 @@
     <div class="u-Container">
 
       <div class="c-Head">
-        <p>単語帳作成</p>
+        <div class="c-Link-Wrapper">
+          <a>単語作成</a>
+        </div>
       </div>
       
       <div class="c-Massage-Wrapper">
@@ -34,20 +36,6 @@
           <p><label><input type="text" placeholder="単語を入力" name="card_name"></label></p>
           <p><label><input type="text" id="a-Large" value="" placeholder="大分類を入力" name="large_category_name"></label></p>
           <p><label><input type="text" id="a-Small" value="" placeholder="小分類を入力" name="small_category_name"></label></p>
-
-          <script>
-            var LargeElement = document.querySelector('input[id="a-Large"]')
-            var large_category_str = "{{large_category_name}}"
-            if (large_category_str) {
-              LargeElement.setAttribute('value',large_category_str);}
-
-
-            var SmallElement = document.querySelector('input[id="a-Small"]')
-            var small_category_str = "{{small_category_name}}"
-            if (small_category_str) {
-              SmallElement.setAttribute('value',small_category_str);}
-          </script>
-
           <p><label><textarea name="note_content" placeholder="ノートを入力"></textarea></label></p>
           <p><label>重要度: <select name="significance">
             <option value="1">★</option>
@@ -71,15 +59,28 @@
         </form>
       </div>
 
-      <div class="c-Wrapper-Btn-For-Move">
+      <div class="c-Wrapper-Btn-Bottom">
         <form action="/large_category/get_list" method="get">
-          <p><input type="submit" value="大分類一覧へ"/></p>
+          <p><input type="submit" value="ホームに戻る"/></p>
         </form>
       </div>
       
     </div>
 
   </main>
+
+  <script>
+    var LargeElement = document.querySelector('input[id="a-Large"]')
+    var large_category_str = "{{large_category_name}}"
+    if (large_category_str) {
+      LargeElement.setAttribute('value',large_category_str);}
+
+
+    var SmallElement = document.querySelector('input[id="a-Small"]')
+    var small_category_str = "{{small_category_name}}"
+    if (small_category_str) {
+      SmallElement.setAttribute('value',small_category_str);}
+  </script>
 
   <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk="
     crossorigin="anonymous"></script>
