--- a/Contents/front/static/css/main.scss
+++ b/Contents/front/static/css/main.scss
@@ -1,3 +1,7 @@
+body {
+    margin:0px;
+}
+
 .u-Container {
     max-width :1000px;
     min-height: 1500px;
@@ -30,26 +34,30 @@
     }
 }
 
-.c-Head-Form-Wrapper {
+.c-Input-Form-Wrapper {
     margin:10px;
 
-    textarea {
-        min-width: 400px;
-        min-height: 100px;
+    .c-Input-Form-Inner {
+        
+        textarea {
+            min-width: 400px;
+            min-height: 100px;
+        }
+
+        input {
+            min-width: 400px;
+            min-height: 20px;
+        }
     }
 
-    input {
-        min-width: 400px;
+    .a-Sort{
+        max-width: 50px;
         min-height: 20px;
     }
 
-    input.button1 {
+    .a-Input-Btn {
         min-width: 100px;
         min-height: 20px;
-    }
-
-    p.title {
-        font-size: 200%;
     }
 }
 
@@ -64,9 +72,10 @@ input.List_Btn {
     flex-wrap: wrap;
 
     input.Card_List_Btn {
-        min-width: 150px;
-        min-height: 40px;
-        margin:10px;
+        min-width: 350px;
+        min-height: 15px;
+        margin:5px;
+        font-size: 80%;
     }
 }
 
@@ -80,7 +89,7 @@ input.List_Btn {
     left: 50%;
     transform: translateX(-50%);
     width: 500px;
-    height: 300px;
+    height: 330px;
     background-color:rgb(255, 255, 255);
 
     .c-Note-Inner{
@@ -93,6 +102,8 @@ input.List_Btn {
     
         .a-Note-Content{
             white-space: pre-wrap;
+            width: 400px;
+            height: 200px;
         }
     }
 
