--- a/Contents/front/templates/list_cards.html
+++ b/Contents/front/templates/list_cards.html
@@ -30,6 +30,10 @@
         </div>
       </div>
 
+      <div class="c-Massage-Wrapper">
+        <p>{{message}}</p>
+      </div>
+
       <div class="c-Body-List">
         <div id="js-Data-Wrapper-ListCards" class="c-Wrapper-ListCards">
         </div>
@@ -40,9 +44,12 @@
           <div id="js-Data-Wrapper-NoteTitle">
             <p id=js-Note-title class="a-title">ノート</p>
           </div>
-          <div id="js-Data-Wrapper-Note">
-            <p id="js-Note-Content" class="a-Note-Content">単語にカーソルを合わせてください。</p>
-          </div>
+          <form id="js-Note-Update" action="" method="post">
+            <div id="js-Data-Wrapper-Note">
+              <p id="js-Note-Content" class="a-Note-Content">単語にカーソルを合わせてください。</p>
+            </div>
+            <input type="submit" id="js-Button-Note" class="a-Button-Note" value="変更を保存"/>
+          </form>
         </div>
       </div>
 
@@ -54,10 +61,8 @@
     var data_json = {{res_json | tojson}}
   </script>
 
-  <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk="
-    crossorigin="anonymous"></script>
-
-    <script src="http://localhost:5005/static/js/main.js"></script>
+  <script src="http://localhost:5005/static/import/jquery-3.6.4.min.js"></script>
+  <script src="http://localhost:5005/static/js/main.js"></script>
 
 </body>
 
