--- a/Contents/front/templates/put_card.html
+++ b/Contents/front/templates/put_card.html
@@ -22,8 +22,11 @@
     <div class="u-Container">
 
       <div class="c-Head">
-        <div class="c-Link-Wrapper">
-          <a>単語詳細</a>
+        <div class="c-Link-Wrapper"></div>
+        <div class="c-Wrapper-Btn-For-Move">
+          <form action="/post_card/view" method="post">
+            <p><input type="submit" value="単語帳を作る"/></p>
+          </form>
         </div>
       </div>
       
@@ -32,43 +35,48 @@
       </div>
 
       
-      <div class="c-Head-Form-Wrapper">
+      <div class="c-Input-Form-Wrapper">
         <form action="/put_card/update" method="post">
           <p><input type="hidden" id="a-Hidden-Card" name="card_id" value=""></p>
-          <p><label><input type="text" id="a-Card" value="" placeholder="単語を入力" name="card_name"></label></p>
-          <p><label><input type="text" id="a-Large" value="" placeholder="大分類を入力" name="large_category_name"></label></p>
-          <p><label><input type="text" id="a-Small" value="" placeholder="小分類を入力" name="small_category_name"></label></p>
-          <p><label><textarea id="a-Note" name="note_content" placeholder="ノートを入力"></textarea></label></p>
-          <p><label>重要度: <select name="significance">
-            <option value="1">★</option>
-            <option value="2">★★</option>
-            <option value="3" selected>★★★</option>
-            <option value="4">★★★★</option>
-            <option value="5">★★★★★</option>
-            </select></label></p>
-          <p><label>学習状況: <select name="study_state">
-            <option value="0">苦手</option>
-            <option value="1" selected>学習中</option>
-            <option value="2">得意</option>
-            <option value="3">完璧</option>
-          </select></label></p> 
-          <p><label><input type="text" placeholder="タグ1を入力" name="tag_name_0"></label></p>
-          <p><label><input type="text" placeholder="タグ2を入力" name="tag_name_1"></label></p>
-          <p><label><input type="text" placeholder="タグ3を入力" name="tag_name_2"></label></p>
-          <p><label><input type="text" placeholder="タグ4を入力" name="tag_name_3"></label></p>
-          <p><label><input type="text" placeholder="タグ5を入力" name="tag_name_4"></label></p>
-          <p><input type="submit" class="button1" value="保存"/></p>
+          <p><label>並び順: <input type="text" id="a-Sort" class="a-Sort" value="" placeholder="並び順" name="sort_number"></label></p>
+          <div class="c-Input-Form-Inner">
+            <p><label><input type="text" id="a-Card" value="" placeholder="単語を入力" name="card_name"></label></p>
+            <p><label>
+              <input type="text" list="l-Large" id="a-Large" value="" placeholder="大分類を入力" name="large_category_name">
+              <datalist id="l-Large">
+              </datalist>
+            </label></p>
+            <p><label>
+              <input type="text" list="l-Small" id="a-Small" value="" placeholder="小分類を入力" name="small_category_name">
+              <datalist id="l-Small">
+              </datalist>
+            </label></p>
+            <p><label><textarea id="a-Note" name="note_content" placeholder="ノートを入力"></textarea></label></p>
+            <p><label>重要度: <select name="significance">
+              <option value="1">★</option>
+              <option value="2">★★</option>
+              <option value="3" selected>★★★</option>
+              <option value="4">★★★★</option>
+              <option value="5">★★★★★</option>
+              </select></label></p>
+            <p><label>学習状況: <select name="study_state">
+              <option value="0">苦手</option>
+              <option value="1" selected>学習中</option>
+              <option value="2">得意</option>
+              <option value="3">完璧</option>
+            </select></label></p> 
+            <p><label><input type="text" placeholder="タグ1を入力" name="tag_name_0"></label></p>
+            <p><label><input type="text" placeholder="タグ2を入力" name="tag_name_1"></label></p>
+            <p><label><input type="text" placeholder="タグ3を入力" name="tag_name_2"></label></p>
+            <p><label><input type="text" placeholder="タグ4を入力" name="tag_name_3"></label></p>
+            <p><label><input type="text" placeholder="タグ5を入力" name="tag_name_4"></label></p>
+          </div>
+          <p><input type="submit" class="a-Input-Btn" value="保存"/></p>
         </form>
 
-        <form action="/put_card/delete" method="post">
+        <form id="js-Delete" action="" method="post">
           <input type="hidden" id="a-Hidden-Card-Delete" name="card_id" value="">
-          <input type="submit" class="button1" value="削除"/>
-        </form>
-      </div>
-
-      <div class="c-Wrapper-Btn-Bottom">
-        <form action="/large_category/get_list" method="get">
-          <p><input type="submit" value="ホームに戻る"/></p>
+          <input type="submit" class="a-Input-Btn" value="削除"/>
         </form>
       </div>
       
@@ -80,9 +88,7 @@
     var data_json = {{res_json | tojson}}
   </script>
 
-  <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk="
-    crossorigin="anonymous"></script>
-
+  <script src="http://localhost:5005/static/import/jquery-3.6.4.min.js"></script>
   <script src="http://localhost:5005/static/js/main.js"></script>
 
 </body>
