--- a/Contents/front/templates/small_category.html
+++ b/Contents/front/templates/small_category.html
@@ -31,6 +31,10 @@
         </div>
       </div>
 
+      <div class="c-Massage-Wrapper">
+        <p>{{message}}</p>
+      </div>
+
       <div class="c-Body-List">
         <div id="js-Data-Wrapper-ListSmallCategory">
         </div>
@@ -44,9 +48,7 @@
     var data_json = {{res_json | tojson}}
   </script>
 
-  <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk="
-    crossorigin="anonymous"></script>
-
+  <script src="http://localhost:5005/static/import/jquery-3.6.4.min.js"></script>
   <script src="http://localhost:5005/static/js/main.js"></script>
 
 </body>
