--- a/Contents/front/static/css/main.scss
+++ b/Contents/front/static/css/main.scss
@@ -70,12 +70,21 @@ input.List_Btn {
     display: flex;
     justify-content:center;
     flex-wrap: wrap;
+    max-width: 500px;
 
     input.Card_List_Btn {
         min-width: 350px;
         min-height: 15px;
         margin:5px;
         font-size: 80%;
+    }
+
+    .a-Reaf {
+        min-width:350px;
+        min-height: 15px;
+        margin:5px;
+        background-color:black;
+        color:aquamarine;
     }
 }
 
@@ -85,11 +94,11 @@ input.List_Btn {
 
 .c-Note-Wrapper {
     position:fixed;
-    bottom:10%;
-    left: 50%;
-    transform: translateX(-50%);
-    width: 500px;
-    height: 330px;
+    bottom:50%;
+    right: 10%;
+    transform: translateY(50%);
+    min-width: 400px;
+    min-height: 550px;
     background-color:rgb(255, 255, 255);
 
     .c-Note-Inner{
@@ -102,9 +111,13 @@ input.List_Btn {
     
         .a-Note-Content{
             white-space: pre-wrap;
-            width: 400px;
-            height: 200px;
-        }
+            min-width: 300px;
+            min-height: 400px;        }
+
+        // textarea {
+        //     min-width: 300px;
+        //     min-height: 400px;
+        // }
     }
 
 }
