不具合修正：しおり作成

--- a/Contents/front/static/css/main.css
+++ b/Contents/front/static/css/main.css
@@ -67,7 +67,7 @@ input.List_Btn {
   margin: 5px;
   font-size: 80%;
 }
-.c-Wrapper-ListCards .a-Reaf {
+.c-Wrapper-ListCards .a-Separator {
   min-width: 350px;
   min-height: 15px;
   margin: 5px;
