--- a/Contents/front/static/css/main.scss
+++ b/Contents/front/static/css/main.scss
@@ -79,7 +79,7 @@ input.List_Btn {
         font-size: 80%;
     }
 
-    .a-Reaf {
+    .a-Separator {
         min-width:350px;
         min-height: 15px;
         margin:5px;
