--- a/Contents/front/templates/post_card.html
+++ b/Contents/front/templates/post_card.html
@@ -38,7 +38,7 @@
       
       <div class="c-Input-Form-Wrapper">
         <form action="insert" method="post">
-          <p><label>しおりを作る: <input type="checkbox" id="js-Check" class="a-check" name="is_reaf"></label></p>
+          <p><label>しおりを作る: <input type="checkbox" id="js-Check" class="a-check" name="is_separator"></label></p>
           <div class="c-Input-Form-Inner">
             <p><label><input type="text" placeholder="単語を入力" name="card_name"></label></p>
             <p><label>
