--- a/Contents/front/static/css/main.css
+++ b/Contents/front/static/css/main.css
@@ -2,101 +2,106 @@ body {
   margin: 0px;
 }
 
-.u-Container {
-  max-width: 1000px;
-  min-height: 1500px;
-  margin-right: auto;
-  margin-left: auto;
+.u-Head {
   text-align: center;
-  background-color: rgb(172, 232, 232);
-  color: rgb(14, 34, 36);
-}
-.u-Container .c-Massage-Wrapper {
-  margin: 10px;
-  color: blue;
-}
-.u-Container .c-Head {
   position: relative;
   min-height: 80px;
 }
-.u-Container .c-Head .c-Link-Wrapper {
+.u-Head .c-Link-Wrapper {
   margin: 0px;
   font-size: 140%;
   padding: 20px;
 }
-.u-Container .c-Head .c-Wrapper-Btn-For-Move {
+.u-Head .c-Wrapper-Btn-For-Move {
   position: absolute;
   top: 20px;
-  right: 5%;
+  right: 10%;
 }
 
-.c-Input-Form-Wrapper {
+.u-Massage-Wrapper {
   margin: 10px;
-}
-.c-Input-Form-Wrapper .c-Input-Form-Inner textarea {
-  min-width: 400px;
-  min-height: 100px;
-}
-.c-Input-Form-Wrapper .c-Input-Form-Inner input {
-  min-width: 400px;
-  min-height: 20px;
-}
-.c-Input-Form-Wrapper .a-Sort {
-  max-width: 50px;
-  min-height: 20px;
-}
-.c-Input-Form-Wrapper .a-Input-Btn {
-  min-width: 100px;
-  min-height: 20px;
+  color: blue;
 }
 
-input.List_Btn {
-  margin: 10px;
-  min-width: 400px;
+.u-List-Unit {
+  text-align: center;
+  max-width: 1200px;
+  min-height: 1500px;
+  margin-right: auto;
+  margin-left: auto;
+  background-color: rgb(42, 42, 42);
+  color: rgb(164, 164, 164);
+  position: relative;
 }
-
-.c-Wrapper-ListCards {
-  display: flex;
-  justify-content: center;
-  flex-wrap: wrap;
+.u-List-Unit .c-Wrapper-ListCards {
+  position: absolute;
+  margin-left: 15%;
   max-width: 500px;
 }
-.c-Wrapper-ListCards input.Card_List_Btn {
+.u-List-Unit .c-Wrapper-ListCards .a-Card {
   min-width: 350px;
   min-height: 15px;
   margin: 5px;
   font-size: 80%;
+  background-color: rgb(16, 16, 16);
+  color: rgb(200, 200, 200);
 }
-.c-Wrapper-ListCards .a-Separator {
+.u-List-Unit .c-Wrapper-ListCards .a-Separator {
   min-width: 350px;
   min-height: 15px;
   margin: 5px;
-  background-color: black;
-  color: aquamarine;
+  background-color: rgb(218, 218, 218);
+  color: rgb(28, 28, 28);
+}
+.u-List-Unit .c-Wrapper-ListCategory {
+  position: relative;
+}
+.u-List-Unit .c-Wrapper-ListCategory .a-Category {
+  margin: 10px;
+  min-width: 400px;
+  min-height: 15px;
+  background-color: rgb(16, 16, 16);
+  color: rgb(200, 200, 200);
+}
+.u-List-Unit .c-Wrapper-Note {
+  float: right;
+  position: relative;
+  margin-right: 15%;
+  min-width: 400px;
+  min-height: 550px;
+  background-color: rgb(16, 16, 16);
+  color: rgb(200, 200, 200);
+}
+.u-List-Unit .c-Wrapper-Note .c-Note-Inner .a-title {
+  margin: 20px;
+  font-size: 120%;
+}
+.u-List-Unit .c-Wrapper-Note .c-Note-Inner .a-Note-Content {
+  white-space: pre-wrap;
+  min-width: 300px;
+  min-height: 400px;
+}
+
+.u-Input-Form-Wrapper {
+  margin: 10px;
+}
+.u-Input-Form-Wrapper .c-Input-Form-Inner textarea {
+  min-width: 400px;
+  min-height: 100px;
+}
+.u-Input-Form-Wrapper .c-Input-Form-Inner input {
+  min-width: 400px;
+  min-height: 20px;
+}
+.u-Input-Form-Wrapper .a-Sort {
+  max-width: 50px;
+  min-height: 20px;
+}
+.u-Input-Form-Wrapper .a-Input-Btn {
+  min-width: 100px;
+  min-height: 20px;
 }
 
 .c-Wrapper-Btn-Bottom {
   margin: 30px;
-}
-
-.c-Note-Wrapper {
-  position: fixed;
-  bottom: 50%;
-  right: 10%;
-  transform: translateY(50%);
-  min-width: 400px;
-  min-height: 550px;
-  background-color: rgb(255, 255, 255);
-}
-.c-Note-Wrapper .c-Note-Inner {
-  position: relative;
-}
-.c-Note-Wrapper .c-Note-Inner .a-title {
-  margin: 20px;
-  font-size: 120%;
-}
-.c-Note-Wrapper .c-Note-Inner .a-Note-Content {
-  white-space: pre-wrap;
-  min-width: 300px;
-  min-height: 400px;
 }/*# sourceMappingURL=main.css.map */
