--- a/Contents/front/templates/post_card.html
+++ b/Contents/front/templates/post_card.html
@@ -1,42 +1,45 @@
 <!DOCTYPE html>
 <html lang="ja">
 
-<head>
-  <link rel="stylesheet" href="http://localhost:5005/static/css/main.css">
-  <link rel="stylesheet" href="http://localhost:5005/static/js/main.js">
+  <head>
+    <script src="http://localhost:5005/static/import/jquery-3.6.4.min.js"></script>
+  </head>
 
-  <!-- Required meta tags -->
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <body>
+    <main class="u-List-Unit">
+      
+      <div>
+        <link rel="stylesheet" href="http://localhost:5005/static/css/main.css">
+        <link rel="stylesheet" href="http://localhost:5005/static/js/main.js">
+      
+        <!-- Required meta tags -->
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+      
+        <!-- Bootstrap CSS -->
+        <link href="http://localhost:5005/static/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+      
+        <title>Hello, world!</title>
+      </div>        
 
-  <!-- Bootstrap CSS -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-
-  <title>Hello, world!</title>
-</head>
-
-<body>
-  <main>
-    <div class="u-Container">
-
-      <div class="c-Head">
-        <div class="c-Link-Wrapper">
-          <a>単語作成</a>
-        </div>
-        <div class="c-Wrapper-Btn-For-Move">
-          <form action="/large_list/get_list" method="get">
-            <p><input type="submit" value="ホームに戻る"/></p>
-          </form>
+      <div id="js-Header-Post">
+        <div class="u-Head">
+          <div class="c-Link-Wrapper">
+            <a>単語作成</a>
+          </div>
+          <div class="c-Wrapper-Btn-For-Move">
+            <form action="/large_list/get_list" method="get">
+              <p><input type="submit" value="ホームに戻る"/></p>
+            </form>
+          </div>
         </div>
       </div>
       
-      <div class="c-Massage-Wrapper">
+      <div class="u-Massage-Wrapper">
         <p>{{message}}</p>
       </div>
 
-      
-      <div class="c-Input-Form-Wrapper">
+      <div class="u-Input-Form-Wrapper">
         <form action="insert" method="post">
           <p><label>しおりを作る: <input type="checkbox" id="js-Check" class="a-check" name="is_separator"></label></p>
           <div class="c-Input-Form-Inner">
@@ -74,27 +77,16 @@
           <p><input type="submit" class="a-Input-Btn" value="作成"/></p>
         </form>
       </div>
-      
-    </div>
 
-  </main>
+      <div id="js-Footer"></div>
 
+    </main>
+  </body>
+  
   <script>
-    var LargeElement = document.querySelector('input[id="a-Large"]')
-    var large_category_str = "{{large_category_name}}"
-    if (large_category_str) {
-      LargeElement.setAttribute('value',large_category_str);}
-
-
-    var SmallElement = document.querySelector('input[id="a-Small"]')
-    var small_category_str = "{{small_category_name}}"
-    if (small_category_str) {
-      SmallElement.setAttribute('value',small_category_str);}
+    var data_json = {{res_json | tojson}}
   </script>
-
-  <script src="http://localhost:5005/static/import/jquery-3.6.4.min.js"></script>
   <script src="http://localhost:5005/static/js/main.js"></script>
-
-</body>
+  <script src="http://localhost:5005/static/bootstrap/js/bootstrap.min.js"></script>
 
 </html>
