--- a/Contents/front/templates/put_card.html
+++ b/Contents/front/templates/put_card.html
@@ -1,41 +1,20 @@
 <!DOCTYPE html>
 <html lang="ja">
-  
+    
   <head>
-  <link rel="stylesheet" href="http://localhost:5005/static/css/main.css">
-  <link rel="stylesheet" href="http://localhost:5005/static/js/main.js">
+    <script src="http://localhost:5005/static/import/jquery-3.6.4.min.js"></script>
+  </head>
 
-  <!-- Required meta tags -->
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-
-  <!-- Bootstrap CSS -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-
-  <title>Hello, world!</title>
-
-</head>
-
-<body>
-  <main>
-    <div class="u-Container">
-
-      <div class="c-Head">
-        <div class="c-Link-Wrapper"></div>
-        <div class="c-Wrapper-Btn-For-Move">
-          <form action="/post_card/view" method="post">
-            <p><input type="submit" value="単語帳を作る"/></p>
-          </form>
-        </div>
-      </div>
+  <body>
+    <main class="u-List-Unit">
       
-      <div class="c-Massage-Wrapper">
+      <div id="js-Header"></div>
+      
+      <div class="u-Massage-Wrapper">
         <p>{{message}}</p>
       </div>
 
-      
-      <div class="c-Input-Form-Wrapper">
+      <div class="u-Input-Form-Wrapper">
         <form action="/put_card/update" method="post">
           <p><input type="hidden" id="a-Hidden-Card" name="card_id" value=""></p>
           <p><label>並び順: <input type="text" id="a-Sort" class="a-Sort" value="" placeholder="並び順" name="sort_number"></label></p>
@@ -80,17 +59,15 @@
         </form>
       </div>
       
-    </div>
+      <div id="js-Footer"></div>
 
-  </main>
+    </main>
+  </body>
 
   <script>
     var data_json = {{res_json | tojson}}
   </script>
-
-  <script src="http://localhost:5005/static/import/jquery-3.6.4.min.js"></script>
   <script src="http://localhost:5005/static/js/main.js"></script>
-
-</body>
+  <script src="http://localhost:5005/static/bootstrap/js/bootstrap.min.js"></script>
 
 </html>
