--- a/Contents/front/templates/small_category.html
+++ b/Contents/front/templates/small_category.html
@@ -1,56 +1,30 @@
 <!DOCTYPE html>
 <html lang="ja">
 
-<head>
-  <link rel="stylesheet" href="http://localhost:5005/static/css/main.css">
-  <link rel="stylesheet" href="http://localhost:5005/static/js/main.js">
+  <head>
+    <script src="http://localhost:5005/static/import/jquery-3.6.4.min.js"></script>
+  </head>
 
-  <!-- Required meta tags -->
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <body>
+    <main class="u-List-Unit">
+        
+      <div id="js-Header"></div>
 
-  <!-- Bootstrap CSS -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-
-  <title>Hello, world!</title>
-
-</head>
-
-<body>
-  <main>
-    
-    <div class="u-Container">
-      
-      <div class="c-Head">
-        <div class="c-Link-Wrapper"></div>
-        <div class="c-Wrapper-Btn-For-Move">
-          <form action="/post_card/view" method="post">
-            <p><input type="submit" value="単語帳を作る"/></p>
-          </form>
-        </div>
-      </div>
-
-      <div class="c-Massage-Wrapper">
+      <div class="u-Massage-Wrapper">
         <p>{{message}}</p>
       </div>
 
-      <div class="c-Body-List">
-        <div id="js-Data-Wrapper-ListSmallCategory">
-        </div>
-      </div>
+      <div id="js-Data-Wrapper-ListSmallCategory" class="c-Wrapper-ListCategory"></div>
 
-    </div>
+      <div id="js-Footer"></div>
 
-  </main>
+    </main>
+  </body>
 
   <script>
     var data_json = {{res_json | tojson}}
   </script>
-
-  <script src="http://localhost:5005/static/import/jquery-3.6.4.min.js"></script>
   <script src="http://localhost:5005/static/js/main.js"></script>
-
-</body>
+  <script src="http://localhost:5005/static/bootstrap/js/bootstrap.min.js"></script>
 
 </html>
